# Arquitectura-Computadoras-2024-1

./: .gitignore  CMakeLists.txt  Criba.js  Goldbach.js  ProtoScanner.py  capture_stereo_frames.py  dataTypes.py  deteccion_color.py  ex1.py  ex2.py  examen1.py  get_images_stereo.py  goldbach.py  regresion.py  requirements.txt  testing.py  webcam.py  webcam_demo_Hough.py  webcam_deteccion_color.py  webcam_rotacion.py
.github/workflows/: cmake-multi-platform.yml
Arduino/: read_blink_led.py  send_blink_state.py  webcam_receive_arduino.py
Arduino/receive_blink_state/: receive_blink_state.ino
Arduino/send_blink_led/: send_blink_led.ino
GUI/: Arduino_GUI.py  GUI_Boton_llamado.py  GUI_ImageLabels.py  GUI_boton.py  GUI_botones.py  GUI_botones_deteccion.py  GUI_elementos.py  GUI_geometriaGRID.py  GUI_geometriaPACK.py  GUI_geometriaPLACE.py  GUI_label.py  plot3d_example.py  plot3d_example2.py  plot_example.py  tkinter_matplotlib_ex1.py  tkinter_matplotlib_ex2.py
GUI/haarcascades/: stopSignDetector.xml  stopSignDetector2.xml
cpp/Casting/: CMakeLists.txt  const_casting.cpp  dynamic_casting.cpp  implicit_conversion.cpp  reinterpret_casting.cpp  static_casting.cpp
cpp/OpenCV/: CMakeLists.txt  image_utils.h  show_image.cpp
cpp/eigen_basics/: CMakeLists.txt  hello_world_eigen.cpp
cpp/img_proc/: CMakeLists.txt  img_proc.cpp  img_proc.hpp
cpp/newFeature/: CMakeLists.txt  my_new_Feature.cpp  parameters.ini
cpp/newFeature/INIH/: CMakeLists.txt
cpp/openmp/: CMakeLists.txt  single_iterators.cpp  single_vs_multiple.cpp
cpp/parallel/: CMakeLists.txt  parallel_examples.cpp  parallel_utils.h
cpp/pointers/: CMakeLists.txt  add_vectors.cpp  heap_allocating.cpp  heap_allocating_new.cpp  leak_memory.cpp  main_multiply.cpp  main_sort.cpp  pointers.cpp  pointers_arrays.cpp  pointers_basics.cpp  pointers_utils.h
cpp/smartPointers/: CMakeLists.txt  auto_pointers_ex.cpp  shared_pointers_ex.cpp  smart_pointers.cpp  unique_ptr_ex.cpp  weak_pointers_ex.cpp
cpp/templates/: CMakeLists.txt  template_class_ex1.cpp  template_ex1.cpp  template_ex2.cpp
game/: hello_world.py  pygame_example.py
