cmake_minimum_required(VERSION 3.6)
project(cppBasics)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(cpp/pointers)
add_subdirectory(cpp/parallel)
add_subdirectory(cpp/OpenCV)
add_subdirectory(cpp/smartPointers)
add_subdirectory(cpp/templates)
add_subdirectory(cpp/Casting)
add_subdirectory(cpp/newFeature)
add_subdirectory(cpp/openmp)
add_subdirectory(cpp/eigen_basics)
add_subdirectory(cpp/img_proc)